# cot-data-collection

./: .gitignore  README.md  pyproject.toml  run.sh
src/: main.py
src/data_collection/: cot_data_reader.py
