[tool.poetry]
name = "cot-data-collection"
version = "0.1.0"
description = ""
authors = ["Armand Silviu Gurgu <armandgurgu23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
typer = "^0.9.0"
requests = "^2.31.0"
pyarrow = "^15.0.1"
pendulum = "^3.0.0"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
